<resources>
    <string name="app_name">Vedu</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="already_an_user_login">Already an user? Login</string>
    <string name="near_police_station">Near Police Station</string>
    <string name="emergency_number">Emergency Number</string>
    <string name="register_complaint">Register Complaint</string>
    <string name="write_complaint">Write Complaint</string>
    <string name="submit">Submit</string>
    <string name="get_image">Get Image</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="any_hint_for_police_write_here">Any Hint? For Police write here!</string>
    <string name="delhi">Delhi</string>
    <string name="helpline_no">Helpline No.:</string>
    <string name="country">Country:</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="make_sos">Make SOS</string>
    <string name="default_web_client_id" />
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="vedu">Vedu</string>
    <string name="important_updates">Important Updates</string>
    <string name="learn_from_tutorials">Learn from tutorials</string>
    <string name="logout">Logout</string>
    <string name="notification_upload">Notification Upload</string>
    <string name="enter_notification_message">Enter Notification Message</string>
    <string name="enter_date_dd_mm_yyyy">Enter Date (dd/mm/yyyy)</string>
    <resources>
        <string-array name="planets_array">
            <item>Mercury</item>
            <item>Venus</item>
            <item>Earth</item>
            <item>Mars</item>
            <item>Jupiter</item>
            <item>Saturn</item>
            <item>Uranus</item>
            <item>Neptune</item>
        </string-array>
    </resources>

</resources>