<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:layout_margin="16dp"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/country"
            android:textColor="@color/lavender"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Helpline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/country"
            android:layout_marginStart="10dp"
            android:text="@string/helpline_no"
            android:textColor="@color/lavender"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Helpline"
            android:layout_marginStart="10dp"
            android:text="@string/email"
            android:textColor="@color/lavender"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginStart="10dp"
            android:text="@string/address"
            android:textColor="@color/lavender"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>