<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Complaint">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="701dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_to_police"
                android:textAlignment="center"
                android:textColor="@color/lavender"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/h1"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:autofillHints="name"
                android:drawablePadding="8dp"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/h2"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="Autofill" />


            <EditText
                android:id="@+id/h3"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="8dp"
                android:hint="@string/phone_number"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="Autofill,TextContrastCheck" />

            <EditText
                android:id="@+id/h4"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:drawablePadding="8dp"
                android:hint="@string/address"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:inputType="text"
                tools:ignore="Autofill" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image12"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/uploadimg"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="156dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:text="Upload Image"
                    android:textColor="@color/lavender"
                    android:textSize="14sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/com"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="15dp"
                android:drawablePadding="8dp"
                android:hint="@string/write_complaint"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:inputType="text"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/sub"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/lavender"
                android:text="@string/submit"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>