<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FECCCC"
    app:circularflow_defaultRadius="20dp"
    tools:context="com.ved.Vedu.MainActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="80dp"
        android:layout_height="28dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="16dp"
        android:text="@string/vedu"
        android:textColor="#010205"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:background="#E0F0F8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ECE8E8"
            android:orientation="horizontal"
            app:circularflow_radiusInDP="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/v1"
                android:layout_width="354dp"
                android:layout_height="130dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="14dp"
                app:cardBackgroundColor="#FEFEFE"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="56dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="40dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/img" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="193dp"
                    android:layout_height="31dp"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/register_complaint"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="358dp"
                android:layout_height="156dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="155dp"
                android:backgroundTint="#FFFFFF"
                app:cardCornerRadius="22dp">

                <ImageView
                    android:id="@+id/b1"
                    android:layout_width="92dp"
                    android:layout_height="82dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="19dp"
                    android:src="@drawable/circle"
                    tools:ignore="DuplicateIds" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="40dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/img_2" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="83dp"
                    android:layout_height="41dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="110dp"
                    android:text="@string/emergency_number"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/b2"
                    android:layout_width="92dp"
                    android:layout_height="92dp"
                    android:layout_marginStart="126dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/learn" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="77dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="130dp"
                    android:layout_marginTop="110dp"
                    android:text="@string/learn_from_tutorials"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/b3"
                    android:layout_width="92dp"
                    android:layout_height="82dp"
                    android:layout_marginStart="244dp"
                    android:layout_marginTop="19dp"
                    android:src="@drawable/circle" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="87dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="244dp"
                    android:layout_marginTop="110dp"
                    android:text="@string/near_police_station"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="405dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="324dp"
                android:layout_marginEnd="12dp"
                app:cardCornerRadius="22dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="55dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="4dp"
                    app:srcCompat="@drawable/pin" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/important_updates"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="14sp"
                    android:textStyle="bold|italic" />

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="50dp" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="signout"
        android:text="@string/logout"
        android:textColorLink="#DACCCC"
        tools:layout_editor_absoluteX="283dp"
        tools:layout_editor_absoluteY="5dp" />

</androidx.constraintlayout.widget.ConstraintLayout>